# PA-DGU

./: .black  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.messaging.yml  docker-compose.yml  docker-entrypoint.sh  isort.cfg  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  testing.yml
admin/: __init__.py  auth.py  config.py
admin/views/: categories.py  exams.py  group_messages.py  groups.py  materials.py  news.py  notifications.py  personal_mesages.py  rooms.py  users.py
alembic/: env.py
alembic/versions/: 10b7400dccba_.py  394e2475f2a9_.py
app/: main.py
app/api/: routers.py
app/api/categories/: routers.py  service.py
app/api/chats/: dependencies.py  routers.py
app/api/exams/: routers.py  service.py  utils.py
app/api/groups/: routers.py  service.py
app/api/materials/: routers.py  schemas.py  service.py
app/api/news/: routers.py  schemas.py  service.py
app/api/notifications/: routers.py  schemas.py  service.py
app/core/connections/: __init__.py  base.py  cache.py  database.py  messaging.py  storage.py
app/core/database/: __init__.py  db.py
app/core/dependencies/: __init__.py  auth_websocket.py  base.py  cache.py  database.py  storage.py
app/core/exceptions/: __init__.py  auth.py  base.py  categories.py  common.py  exams.py  groups.py  handlers.py  materials.py  news.py  rate_limit.py  users.py
app/core/lifespan/: __init__.py  base.py  clients.py  database.py
app/core/logging/: __init__.py  formatters.py  setup.py
app/core/managers/: group_websocket.py  group_websocket_manager.py  private_websocket.py
app/core/middlewares/: activity.py  auth_cookie.py  logging.py  rate_limit.py  verification.py
app/core/migrations/: env.py
app/core/security/: auth.py  cookies.py  password.py  token.py
app/core/settings/: __init__.py  logging.py  paths.py  settings.py
app/core/tasks/: __init__.py  celery.py  periodic_tasks.py  tasks.py
app/models/: __init__.py
app/models/v1/: __init__.py  base.py  categories.py  chats.py  (+6 more)
app/routes/: base.py  main.py
app/schemas/: __init__.py
postgres_data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
postgres_data/pg_xact/: 0000
scripts/: activate.bat  activate.ps1  activate.sh  commands.py  setup.bat  setup.ps1  setup.sh
src/: alembic.ini  app.py  config.py  create_superuser.py  test.db
src/admin/: __init__.py  auth.py  categories.py  exams.py  group_messages.py  groups.py  lecture.py  news.py  notifications.py  organizations.py  personal_messages.py  rooms.py  users.py
src/alembic/: env.py
src/api/: __init__.py  main.py  routers.py
src/core/: config.py
src/tasks/: __init__.py  config_celery.py  tasks.py
src/tests/: conftest.py  test_users.py  user_tests.py
(+682 files in other folders)
