[tool.poetry]
name = "personal-accounts"
version = "0.1.0"
description = ""
authors = ["zabit <xaclafun1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
fastapi = {extras = ["standard"], version = "^0.115.0"}
asyncpg = "^0.29.0"
uvicorn = "^0.31.0"
environs = "^11.0.0"
pydantic-settings = "^2.5.2"
aiosqlite = "^0.20.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^4.0.0"
autoflake = "^2.3.1"
gunicorn = "^23.0.0"
orjson = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
